--- a/dspg.html
+++ b/dspg.html
@@ -309,18 +309,8 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<div id="contributed" class="section level2">
-<h2>Contributed</h2>
-<p>2022 International Association of Identification, in-person: <em>A
-Cartridge Case Comparison Pipeline</em></p>
-<p>2022 American Association of Forensic Science, in-person: <em>An
-Accessible Open-Source Implementation of the Congruent Matching Cells
-Algorithms for Cartridge Case Analysis</em> (<a
-href="https://github.com/jzemmels/aafs22_slides/blob/main/slides/An%20Accessible%20Open-Source%20Implementation%20of%20the%20Congruent%20Matching%20Cells%20Algorithms%20for%20Cartridge%20Case%20Analysis%20D38.pptx">slides</a>)</p>
-<p>2020 Firearms and Toolmarks Workshop <em>cmcR: Open-Source
-Implementation of the Congruent Matching Cells Method</em> (<a
-href="https://github.com/jzemmels/cmcR_presentation">slides</a>)</p>
-</div>
+<p>Summer 2021 Data Science for the Public Good</p>
+<p><a href="https://dspg2021.github.io/work/index.html">link</a></p>
 
 
 
