--- a/index.html
+++ b/index.html
@@ -252,6 +252,9 @@ $(document).ready(function () {
   <a href="academicExperience.html">Academic Experience</a>
 </li>
 <li>
+  <a href="dspg.html">Data Science for the Public Good</a>
+</li>
+<li>
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
@@ -259,9 +262,6 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="talks.html">Speaking</a>
-</li>
-<li>
-  <a href="software.html">Software</a>
 </li>
 <li>
   <a href="personalProjects.html">Personal Projects</a>
@@ -318,9 +318,11 @@ href="https://www.forensicstats.org/">Center for Statistics and
 Applications in Forensic Evidence</a> (CSAFE). My research interests are
 in forensic statistics and pattern recognition, with applications to
 cartridge case evidence.</p>
-<p>I earned my MS in statistics in 2020 from Iowa State University and
-B.Sc. in Honors Mathematics and Mathematics: Secondary Education from
-Winona State University in 2017.</p>
+<p>I earned my M.Sc. in statistics in 2020 from Iowa State University
+and B.Sc. in Honors Mathematics and Mathematics: Secondary Education
+from Winona State University in 2017.</p>
+<p>I love creating tools to help others learn and analyze data more
+effectively.</p>
 
 
 
