--- a/research.html
+++ b/research.html
@@ -252,6 +252,9 @@ $(document).ready(function () {
   <a href="academicExperience.html">Academic Experience</a>
 </li>
 <li>
+  <a href="dspg.html">Data Science for the Public Good</a>
+</li>
+<li>
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
@@ -259,9 +262,6 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="talks.html">Speaking</a>
-</li>
-<li>
-  <a href="software.html">Software</a>
 </li>
 <li>
   <a href="personalProjects.html">Personal Projects</a>
@@ -309,15 +309,24 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<div id="reproducible-research" class="section level2">
-<h2>Reproducible Research</h2>
-</div>
-<div id="diagnostic-tools" class="section level2">
-<h2>Diagnostic Tools</h2>
-</div>
-<div id="firearms-toolmarks-comparison-algorithms"
+<div id="firearms-and-toolmarks-comparison-algorithms"
 class="section level2">
-<h2>Firearms &amp; Toolmarks Comparison Algorithms</h2>
+<h2>Firearms and Toolmarks Comparison Algorithms</h2>
+<div id="cran-packages" class="section level3">
+<h3>CRAN Packages</h3>
+<ul>
+<li><a href="https://github.com/CSAFE-ISU/cmcR">cmcR</a>: An
+Implementation of the ‘Congruent Matching Cells’ Method</li>
+</ul>
+</div>
+<div id="github-packages" class="section level3">
+<h3>GitHub Packages</h3>
+<ul>
+<li><a href="https://github.com/jzemmels/impressions">impressions</a>:
+An R package for diagnosing cartridge case impression comparison
+algorithms</li>
+</ul>
+</div>
 </div>
 
 
