--- a/teaching.html
+++ b/teaching.html
@@ -252,6 +252,9 @@ $(document).ready(function () {
   <a href="academicExperience.html">Academic Experience</a>
 </li>
 <li>
+  <a href="dspg.html">Data Science for the Public Good</a>
+</li>
+<li>
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
@@ -259,9 +262,6 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="talks.html">Speaking</a>
-</li>
-<li>
-  <a href="software.html">Software</a>
 </li>
 <li>
   <a href="personalProjects.html">Personal Projects</a>
