--- a/research.html
+++ b/research.html
@@ -315,16 +315,23 @@ class="section level2">
 <div id="cran-packages" class="section level3">
 <h3>CRAN Packages</h3>
 <ul>
-<li><a href="https://github.com/CSAFE-ISU/cmcR">cmcR</a>: An
-Implementation of the ‘Congruent Matching Cells’ Method</li>
+<li><a href="https://github.com/CSAFE-ISU/cmcR"><code>cmcR</code></a>:
+An Implementation of the ‘Congruent Matching Cells’ Method</li>
 </ul>
 </div>
 <div id="github-packages" class="section level3">
 <h3>GitHub Packages</h3>
 <ul>
-<li><a href="https://github.com/jzemmels/impressions">impressions</a>:
+<li><a
+href="https://github.com/jzemmels/impressions"><code>impressions</code></a>:
 An R package for diagnosing cartridge case impression comparison
 algorithms</li>
+</ul>
+</div>
+<div id="applications" class="section level3">
+<h3>Applications</h3>
+<ul>
+<li>[<code>cartridgeInvestigatR</code>]</li>
 </ul>
 </div>
 </div>
