--- a/dspg.html
+++ b/dspg.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="./files/resume_Zemmels_10-29.pdf">
-    <span class="fa fa-file fa-lg"></span>
+    <span class="ai ai-cv ai-lg"></span>
      
   </a>
 </li>
@@ -308,14 +308,19 @@ $(document).ready(function () {
 </div>
 
 
-<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p>In the Summer 2021, I had the honor of working with the Iowa
-Department of Human Rights (DHR) as part of the <a
+<p><link rel="stylesheet" href="styles.css" type="text/css">
+<link rel="stylesheet" href="academicicons/css/academicicons.min.css"/></p>
+<div class="row" align="center">
+<p><img src="images/dspgIowa.jpg" alt="DSPG" style="width:30%">
+<img src="images/idhr.png" alt="IDHR" style="width:15%"></p>
+</div>
+<p>In the Summer 2021 I had the honor of working with the Iowa
+Department of Human Rights (IDHR) as part of the <a
 href="https://dspg.iastate.edu/">Data Science for the Public Good</a>
-program. Iowa DHR was interested in collecting and analyzing Iowa
-workforce and economic development data to develop educational resources
-for state legislators and other stakeholders. As a Graduate Fellow, I
-along with ISU faculty <a
+program. IDHR was interested in collecting and analyzing Iowa workforce
+and economic development data to develop educational resources for state
+legislators and other stakeholders. As a Graduate Fellow, I along with
+ISU faculty <a
 href="https://dspg.iastate.edu/people/christopher-seeger">Chris
 Seeger</a> and <a
 href="https://dspg.iastate.edu/people/bailey-hanson">Bailey Hanson</a>
