--- a/research.html
+++ b/research.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="./files/resume_Zemmels_10-29.pdf">
-    <span class="fa fa-file fa-lg"></span>
+    <span class="ai ai-cv ai-lg"></span>
      
   </a>
 </li>
@@ -308,7 +308,8 @@ $(document).ready(function () {
 </div>
 
 
-<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
+<p><link rel="stylesheet" href="styles.css" type="text/css">
+<link rel="stylesheet" href="academicicons/css/academicicons.min.css"/></p>
 <div id="firearms-and-toolmarks-comparison-algorithms"
 class="section level2">
 <h2>Firearms and Toolmarks Comparison Algorithms</h2>
@@ -328,10 +329,12 @@ An R package for diagnosing cartridge case impression comparison
 algorithms</li>
 </ul>
 </div>
-<div id="applications" class="section level3">
-<h3>Applications</h3>
+<div id="interactive-applications" class="section level3">
+<h3>Interactive Applications</h3>
 <ul>
-<li>[<code>cartridgeInvestigatR</code>]</li>
+<li><a
+href="https://jzemmels.shinyapps.io/cartridgeinvestigatR/"><code>cartridgeInvestigatR</code></a>:
+process and compare cartridge case scans</li>
 </ul>
 </div>
 </div>
