--- a/contact.html
+++ b/contact.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="./files/resume_Zemmels_10-29.pdf">
-    <span class="fa fa-file fa-lg"></span>
+    <span class="ai ai-cv ai-lg"></span>
      
   </a>
 </li>
@@ -309,7 +309,7 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css">
-<!-- <link rel="stylesheet" href="academicicons/css/academicons.min.css"/> --></p>
+<link rel="stylesheet" href="academicicons/css/academicicons.min.css"/></p>
 <p><img src="images/csafe-logo-90.png" style="width:25%; margin-right: 50px" align="right"></p>
 <p><strong>Center for Statistics and Applications in Forensic
 Evidence</strong><br> 195 Durham Center<br> 613 Morrill Road<br> Ames,
