--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="./files/resume_Zemmels_10-29.pdf">
-    <span class="fa fa-file fa-lg"></span>
+    <span class="ai ai-cv ai-lg"></span>
      
   </a>
 </li>
@@ -309,7 +309,7 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css">
-<!-- <link rel="stylesheet" href="academicicons/css/academicons.min.css"/> --></p>
+<link rel="stylesheet" href="academicicons/css/academicicons.min.css"/></p>
 <p><img src="images/exteriorHeadshot_cropped.jpg" style="width:25%; border:5px solid; margin-right: 20px" align="left"></p>
 <p>I am a Ph.D. candidate in the <a
 href="https://www.stat.iastate.edu/">Department of Statistics</a> at
