Missed a bullet point

--- a/academicExperience.html
+++ b/academicExperience.html
@@ -441,7 +441,7 @@ the scikit-learn Python library’s <code>k-means</code> function as a
 benchmark to which the HMRF was compared.</p></li>
 <li><p><a
 href="https://rstudio.github.io/reticulate/"><code>reticulate</code></a>:
-interface with</p></li>
+use Python functions in R</p></li>
 <li><p><a
 href="https://cran.r-project.org/web/packages/xaringan/index.html"><code>xaringan</code></a>:
 create presentation slides</p></li>
